--- a/css/style.css
+++ b/css/style.css
@@ -1,72 +1,72 @@
 :root {
-    --primario: #9C27B0;
-    --primarioOscuro: #891190;
-    --secundario: #FFCE00;
-    --secundarioOscuro: rgb(233, 287, 2);
-    --negro: #000;
-    --blanco: #fff;
+  --primario: #9c27b0;
+  --primarioOscuro: #891190;
+  --secundario: #ffce00;
+  --secundarioOscuro: rgb(233, 287, 2);
+  --negro: #000;
+  --blanco: #fff;
 
-    --fuentePrincipal: 'Staatliches', cursive;
+  --fuentePrincipal: "Staatliches", cursive;
 }
 
 /* apply a natural box layout model to all elements, but allowing components to change */
 html {
-    box-sizing: border-box;
-    font-size: 62.5%;
-    /*1rem=1px*/
+  box-sizing: border-box;
+  font-size: 62.5%;
+  /*1rem=1px*/
 }
 
 *,
 *:before,
 *:after {
-    box-sizing: inherit;
+  box-sizing: inherit;
 }
 
 /*GLOBALES*/
 body {
-    background-color: var(--primario);
-    font-size: 1.6rem;
-    line-height: 1.5;
+  background-color: var(--primario);
+  font-size: 1.6rem;
+  line-height: 1.5;
 }
 
 p {
-    font-size: 1.8rem;
-    font-family: Arial, Helvetica, sans-serif;
-    color: var(--blanco);
+  font-size: 1.8rem;
+  font-family: Arial, Helvetica, sans-serif;
+  color: var(--blanco);
 }
 
 a {
-    text-decoration: none;
+  text-decoration: none;
 }
 
 img {
-    max-width: 100%;
+  width: 100%;
 }
 
 .contenedor {
-    max-width: 120rem;
-    /*1200px*/
-    margin: 0 auto;
+  max-width: 120rem;
+  /*1200px*/
+  margin: 0 auto;
 }
 
 h1,
 h2,
 h3 {
-    text-align: center;
-    color: var(--secundario);
-    font-family: var(--fuentePrincipal);
+  text-align: center;
+  color: var(--secundario);
+  font-family: var(--fuentePrincipal);
 }
 
 h1 {
-    font-size: 4rem;
+  font-size: 4rem;
 }
 
 h2 {
-    font-size: 3.2rem;
+  font-size: 3.2rem;
 }
 
 h3 {
-    font-size: 2.4rem;
+  font-size: 2.4rem;
 }
 
 /*BEM: REGLAS:
@@ -76,106 +76,183 @@ MODIFICADOR: ej: <div class="cliente__nombre--ceo">...</div>
 */
 /**HEADER**/
 .header {
-    display: flex;
-    justify-content: center;
+  display: flex;
+  justify-content: center;
 }
 
 .header__logo {
-    margin: 3rem 0;
+  margin: 3rem 0;
 }
 /**FOOTER**/
-.footer{
-    background-color: var(--primarioOscuro);
-    padding: 1rem 0;
-    margin-top: 2rem;
+.footer {
+  background-color: var(--primarioOscuro);
+  padding: 1rem 0;
+  margin-top: 2rem;
 }
 
-.footer__texto{
-    font-family: var(--fuentePrincipal);
-    text-align: center;
+.footer__texto {
+  font-family: var(--fuentePrincipal);
+  text-align: center;
 }
 
 /**NAVEGACION**/
 .navegacion {
-    background-color: -var(--primarioOscuro);
-    padding: 1rem 0;
-    display: flex;
-    justify-content: center;
-    gap: 2rem;
+  background-color: -var(--primarioOscuro);
+  padding: 1rem 0;
+  display: flex;
+  justify-content: center;
+  gap: 2rem;
 }
 
 .navegacion__enlace {
-    font-family: var(--fuentePrincipal);
-    color: var(--blanco);
-    font-size: 3rem;
+  font-family: var(--fuentePrincipal);
+  color: var(--blanco);
+  font-size: 3rem;
 }
 
 .navegacion__enlace--activo,
 .navegacion__enlace:hover {
-    color: var(--secundario);
+  color: var(--secundario);
 }
 
 /**GRID**/
-.grid{
+.grid {
+  display: grid;
+  grid-template-columns: repeat(2, 1fr);
+  gap: 2rem;
+}
+
+@media (min-width: 768px) {
+  .grid {
+    grid-template-columns: repeat(3, 1fr);
+  }
+}
+
+.producto {
+  background-color: var(--primarioOscuro);
+  padding: 1rem;
+}
+
+.producto__nombre {
+  font-size: 4rem;
+}
+
+.producto__precio {
+  font-size: 2.8rem;
+  color: var(--secundario);
+}
+
+.producto__nombre,
+.producto__precio {
+  font-family: var(--fuentePrincipal);
+  margin: 1rem 0;
+  text-align: center;
+  line-height: 1.2;
+}
+
+/**GRAFICOS**/
+
+.grafico {
+  min-height: 30rem;
+  background-repeat: no-repeat;
+  background-size: cover;
+  grid-column: 1 / 3;
+}
+
+.grafico--camisas {
+  grid-row: 2 / 3;
+  background-image: url(../img/grafico1.jpg);
+}
+.grafico--node {
+  background-image: url(../img/grafico2.jpg);
+  grid-row: 8 / 9;
+}
+
+@media (min-width: 768px) {
+  .grafico--node {
+    grid-row: 5 / 6;
+    grid-column: 2 / 4;
+  }
+}
+
+.nosotros {
+  display: grid;
+  grid-template-rows: repeat(2, auto);
+}
+
+@media (min-width: 768px) {
+  .nosotros {
+    grid-template-columns: repeat(2, 1fr);
+    column-gap: 2rem;
+  }
+}
+
+.nosotros__imagen {
+  grid-row: 1 / 2;
+}
+
+@media (min-width: 768px) {
+  .nosotros__imagen {
+    grid-column: 2 / 3;
+  }
+}
+
+.bloques {
+  display: grid;
+  grid-template-columns: repeat(2, 1fr);
+  gap: 2rem;
+}
+
+@media (min-width: 768px) {
+  .bloques {
+    grid-template-columns: repeat(4, 1fr);
+  }
+}
+
+.bloque {
+  text-align: center;
+}
+
+.bloque__titulo {
+  margin: 0;
+}
+
+/** PAGINA DEL PRODUCTO **/
+@media (min-width: 768px) {
+  .camisa {
+    display: grid;
+    grid-template-columns: repeat(2, 1fr);
+    column-gap: 2rem;
+  }
+}
+
+.formulario {
     display: grid;
     grid-template-columns: repeat(2, 1fr);
     gap: 2rem;
 }
 
-@media (min-width: 768px){
-    .grid{
-        grid-template-columns: repeat(3, 1fr);
-    }
-}
-
-.producto{
-    background-color: var(--primarioOscuro);
+.formulario__campo {
+    border: 1rem solid var(--primarioOscuro);
+    background-color: transparent;
+    color: var(--blanco);
+    font-size: 2rem;
+    font-family: Arial, Helvetica, sans-serif;
     padding: 1rem;
+    appearance: none;
 }
 
-.producto__imagen{
-    width: 100%;
+.formulario__submit {
+  background-color: var(--secundario);
+  border: none;
+  font-size: 2rem;
+  font-family: var(--fuentePrincipal);
+  padding: 2rem;
+  transition: background-color 0.3s ease;
+  grid-column: 1 / 3;
 }
 
-.producto__nombre{
-    font-size: 4rem;
+.formulario__submit:hover {
+  cursor: pointer;
+  background-color: var(--secundarioOscuro);
 }
-
-.producto__precio{
-    font-size: 2.8rem;
-    color: var(--secundario);
-}
-
-.producto__nombre,
-.producto__precio{
-    font-family: var(--fuentePrincipal);
-    margin: 1rem 0;
-    text-align: center;
-    line-height: 1.2;
-}
-
-/**GRAFICOS**/
-
-.grafico{
-    min-height: 30rem;
-    background-repeat: no-repeat;
-    background-size: cover;
-    grid-column: 1 / 3;
-}
-
-.grafico--camisas{
-    grid-row: 2 / 3;
-    background-image: url(../img/grafico1.jpg);
-}
-.grafico--node{
-    background-image: url(../img/grafico2.jpg);
-    grid-row: 8 / 9;
-}
-
-@media (min-width: 768px){
-    .grafico--node{
-        grid-row: 5 / 6;
-        grid-column: 2 / 4;
-    }
-}
-
