--- a/css/style.css
+++ b/css/style.css
@@ -253,5 +253,6 @@ MODIFICADOR: ej: <div class="cliente__nombre--ceo">...</div>
 }
 
 .formulario__submit:hover {
+  cursor: pointer;
   background-color: var(--secundarioOscuro);
 }
